# pipeline_qc

./: .bumpversion.cfg  .gitignore  BUILD.md  MANIFEST.in  Makefile  README.md  alignV2  build.gradle  gradle.properties  settings.gradle  setup.cfg  setup.py
pipeline_qc/: align_AICS-94.py  batch_process_argo_power.py  batch_process_optical_control_alignment.py  batch_process_psf.py  batch_process_psf_2.py  calculate_psf_fov.py  camera_alignment.py  detect_edge.py  detect_z_stack_false_clip.py  ff_with_argolight.py  image_processing_methods.py  labkey_cell_generation.py  mip_contact_sheet.py  mip_contact_sheet_all_folders.py  obtain_camera_alignment.py  pipeline_generate_camera_alignment.py  pipeline_psf.py  pipeline_qc_slurm_batch.sh  plot_ff.py  plot_psf.py  process_ff.py  psftools.py  run_alignment_rnd.py  setup.py  single_process_argo_power.py  upload_align_h2b_to_fms.py  upload_aligned_files_to_fms.py  validate_crop_cmdr.py  version.py
pipeline_qc/camera_alignment/: align_AICS-61.py  apply_camera_alignment_utilities.py  upload_aligned_AICS-61.py  upload_aligned_files_to_fms.py
pipeline_qc/camera_alignment_upload/: align_AICS-61.py  upload_aligned_AICS-61.py
pipeline_qc/cell_generation/: labkey_cell_generation.py
pipeline_qc/cell_segmentation/: cell_seg_repository.py  cell_seg_service.py  cell_seg_wrapper.py  configuration.py  fov_file.py
pipeline_qc/dataset_generation/: add_data_to_dataset_with_filters.py
pipeline_qc/image_qc_methods/: batch_fov_qc.py  cardio_mip_qc_generation.py  cell_seg_repository.py  cell_seg_uploader.py  cell_seg_wrapper.py  (+14 more)
(+60 files in other folders)
